- I2C poort handshaking ingebouwd.
- SendTo handshake aanpassing t.n.v. robuustheid werking I2C en NRF.
- Aanpassing: Alle units worden onterecht door NodoOnline() gevuld met poort NRF.

Build 811:
- Aanpassing Sendto en RF433 timings


Build 816:
- Geen tekst strings meer als opdracht te versturen naar de Nodo. Op verzoek kan hiervoor een plugin worden gemaakt.
- Commando ClientIP vervallen (was ook niet in de Wiki opgenomen)

Build 817:
- Wanneer als host een IP adres wordt opgegeven, zal er geen poging worden gedaan om hierop een DNS resolve op los te laten
- Als via DNS een verbinding op basis van hostnaam tot stand is gekomen, zal volgende keer een verbinding direct naar IP adres plaats vinden/ 

Build 820:
- R818 Plugin 21 compile error #912
- VariableInc in een bestand geeft verkeerde waarde, aangeroepen door FileExecute #919
- Nodo events worden alleen verstuurd via poort (RF, 433, IR, NRF24) als daar Nodo's gedetecteerd zijn. 

Build 821:
- EXPERIMENTEEL: RAWSIGNAL_SAMPLE_DEFAULT waarde op 50 i.p.v. 25

Todo:
- LET OP: Originele Wire library van I2C zit weer onder de Nodo core. Nog niet duidelijk of deze wel stabiel genoeg is (m.n. bij niet afbreken bij timeouts)
- RawsignalCleanup
- RGBLedSend <unitnummer> geeft event zonder unitnummer. Dit is probleem voor de WebApp. Navraag bij Martin.
- Plugins langslopen:
  * Plugin_008 (Alecto)    => Geen direct gebruik meer van UserVar[] maar variabelen aanpassen via UserVariableSet();
  * Plugin_009 (Alecto V3) => Geen direct gebruik meer van UserVar[] maar variabelen aanpassen via UserVariableSet();
  * Plugin_010 (Alecto V3) => Geen direct gebruik meer van UserVar[] maar variabelen aanpassen via UserVariableSet();
  * Plugin_011 (OpenTherm) => Geen direct gebruik meer van UserVar[] maar variabelen aanpassen via UserVariableSet(); Tevens Payload definities voor de belangrijkste OT grootheden. 
  * Plugin_012 (Oregon V2) => Payload definities voor de belangrijkste OBIS-codes 
  * Plugin_024 (P1)          

 


 